fixes motor node in phidgets

--- a/phidgets/CMakeLists.txt
+++ b/phidgets/CMakeLists.txt
@@ -52,6 +52,7 @@ include_directories(
    lidar_control.srv
    pid.srv
    servo_reference.srv
+   encoder_request.srv
  )
 
 ## Generate actions in the 'action' folder
